--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   shared_preferences: ^2.2.2
+  fluttertoast: ^8.2.5
   
 
 dev_dependencies:
